<resources>
    <string name="app_name">Healthtrac Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">512959195512759</string>
    <string name="twitter_app_id">fHG53L9zDOTltJ77JPjFGzxf8</string>
    <string name="facebook_login">Log in through Facebook</string>
    <string name="facebook_logout">Log out of Facebook</string>
    <string name="twitter_login">Log in through Twitter</string>
    <string name="twitter_logout">Log out of Twitter</string>
    <string name="title_activity_login_browser">Log in through social media</string>
    <string name="PROVIDER_FACEBOOK">Facebook</string>
    <string name="PROVIDER_TWITTER">Twitter</string>
    <string name="authentication_welcome">Welcome to HealthTrac</string>
    <string name="EXTRA_PROVIDER">com.raik383h_group_6.healthtracmobile.PROVIDER</string>
    <string name="EXTRA_ACCESS_TOKEN">com.raik383h_group_6.healthtracmobile.ACCESS_TOKEN</string>
    <string name="EXTRA_ACCESS_SECRET">com.raik383h_group_6.healthtracmobile.ACCESS_SECRET</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in to existing account</string>
    <string name="title_authentication_activity">Sign in or create an account</string>
    <string name="EXTRA_ACCESS_GRANT">com.raik383h_group_6.healthtrac.ACCESS_GRANT</string>
    <string name="EXTRA_USER">com.raik383h_group6.healthtrac.USER</string>
    <string name="first_name_label">First Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="pref_name_label">Preferred Name</string>
    <string name="pref_name_hint">Preferred Name</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Email</string>
    <string name="location_label">Location</string>
    <string name="location_hint">Location</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Username</string>
    <string name="height_hint">(feet)</string>
    <string name="height_label">Height</string>
    <string name="weight_hint">(stones)</string>
    <string name="weight_label">Weight</string>
    <string name="birthdate_hint">(mm/dd/yyyy)</string>
    <string name="birthdate_label">Birth Date</string>
    <string name="sex_label">Sex</string>
    <string name="male_label">Male</string>
    <string name="facebook_male_label">male</string>
    <string name="label_female">Female</string>
    <string name="empty_field_error">Field must not be empty</string>
    <string name="invalid_field_message">Some fields contained invalid input</string>
    <string name="account_not_made">Account could not be created</string>
    <string name="title_activity_register_user">Register User</string>
    <string name="invalid_date_error">Date is invalid. Please use format \'mm/dd/yyyy\'</string>
    <string name="sign_in_error">Error signing in</string>
    <string name="welcome_user">Hello, %1$s!</string>
    <string name="title_activity_login">Log in through social media</string>
    <string name="title_activity_list_users">View Users</string>
    <string name="no_users_message">No Users found. Are you logged in?</string>
    <string name="edit_user">Edit User</string>
    <string name="title_activity_view_user">View User</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_user">Save User</string>
    <string name="update_user">Update User</string>
    <string name="title_activity_update_user">Update User</string>
    <string name="update_user_error">Could not update user.</string>
    <string name="user_updated_message">User successfully updated</string>
    <string name="title_section1">Feed</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Teams</string>
    <string name="title_section4">Users</string>
    <string name="title_section5">Account</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="edit_account">Edit Account</string>
    <string name="git_fit">GitFit</string>
    <string name="show_users">Show All Users</string>
    <string name="show_profile">Show my profile</string>
    <string name="show_teams">Show all teams</string>
    <string name="error_find_profile">Could not find your profile. Are you logged in?</string>
    <string name="no_teams_message">No teams found. Are you signed in?</string>
    <string name="title_activity_list_teams">View Teams</string>
    <string name="team_name_label">Team</string>
    <string name="description_label">Description</string>
    <string name="edit_team">Edit Team</string>
    <string name="date_created_label">Creation Date</string>
    <string name="join_team">Join Team</string>
    <string name="leave_team">Leave Team</string>
    <string name="EXTRA_TEAM">com.raik383h_group_6.healthtracmobile.TEAM</string>
    <string name="title_activity_view_team">View team</string>
    <string name="error_join_team">An error was encountered attempting to join this team.</string>
    <string name="error_leave_team">An error was encountered in leaving this team</string>
    <string name="success_join_team">Successfully joined team</string>
    <string name="success_leave_team">Successfully left team</string>
    <string name="access_grant_prefs">access_grant_prefs</string>
    <string name="shared_prefs">shared_prefs</string>
    <string name="pref_access_grant">access_grant</string>
    <string name="logout">Log Out</string>
    <string name="login">Log In</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="last_update_time_label">Last location update time:</string>
    <string name="location_updated_message">Location updated</string>
    <string name="pedometer">Pedometer</string>
    <string name="steps">Steps</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="start_activity">Start Activity</string>
    <string name="default_stepcount">0</string>
    <string name="error_create_activity">Error creating activity</string>
    <string name="new_team">Create Team</string>
    <string name="team_not_made">Team could not be created</string>
    <string name="title_activity_create_team">Create Team</string>
    <string name="team_updated_message">Team successfully updated</string>
    <string name="update_team_error">Could not update team</string>
    <string name="title_activity_update_team">Update Team</string>
    <string name="create_energy_level">Create Energy Level</string>
    <string name="mood_label">What\'s your mood?</string>
    <string name="excited_label">EXCITED</string>
    <string name="tired_label">TIRED</string>
    <string name="proud_label">PROUD</string>
    <string name="create_goal">Create Goal</string>
    <string name="field_label">Field to measure goal against</string>
    <string name="steps_label">STEPS</string>
    <string name="distance_label">DISTANCE</string>
    <string name="duration_label">DURATION</string>
    <string name="threshold_label">Threshold</string>
    <string name="threshold_hint">count, seconds, or feet</string>
    <string name="name_label">Goal Name</string>
    <string name="name_hint">Name</string>
    <string name="create_meal">Create Meal</string>
    <string name="calorie_label">Calories</string>
    <string name="hint_calorie">calories</string>
    <string name="error_create_goal">Error creating goal</string>
    <string name="no_grant_message">Grant invalid or expired. Please sign in</string>
    <string name="error_create_meal">Error creating meal</string>
    <string name="error_create_energy_level">Error creating energy level</string>
    <string name="title_activity_create_goal">Create Goal</string>
    <string name="title_activity_create_energy_level">Create Energy Level</string>
    <string name="title_activity_create_meal">Create Meal</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="title_activity_team_leaderboard">Team Leaderboard</string>
    <string name="joined">joined</string>
    <string name="left">left</string>
    <string name="feed_activity">%1$s went %2$s for %3$d steps.</string>
    <string name="feed_energy_level">%1$s changed energy level to %2$s.</string>
    <string name="feed_meal">%1$s ate %2$d calories.</string>
    <string name="feed_membership">%1$s became %2$s in team %3$s.</string>
    <string name="feed_userbadge">%1$s earned the badge %2$s.</string>
    <string name="feed_usergoal_start">%1$s started the goal %2$s.</string>
    <string name="feed_usergoal_end">%1$s met the goal %2$s.</string>
    <string name="EXTRA_USER_ID">com.raik383h_group_6.healthtracmobile.USER_ID</string>
    <string name="EXTRA_TEAM_ID">com.raik383h_group_6.healthtracmobile.TEAM_ID</string>
    <string name="feed_activity_report">%1$s took %2$d steps for the day.</string>
    <string name="no_feed_message">No feeds found.</string>
    <string name="user_feed">View your feed</string>
    <string name="user_feed_generic">View user feed</string>
    <string name="title_activity_feed">View Feed</string>
    <string name="team_feed">View Team Feed</string>
    <string name="distance_label_ar">Distance</string>
    <string name="duration_label_ar">Duration</string>
    <string name="steps_label_ar">Steps</string>
    <string name="EXTRA_ACTIVITY_REPORT">com.raik383h_group_6.healthtracmobile.ACTIVITY_REPORT</string>
    <string name="EXTRA_USERNAME">com.raik383h_group_6.healthtracmobile.USERNAME</string>
    <string name="activity_report_title">%1$s activity report for %2$s</string>
    <string name="title_activity_activity_report">View Activity Report</string>
    <string name="mood_label_el">Mood</string>
    <string name="EXTRA_ENERGY_LEVEL">com.raik383h_group_6.healthtracmobile.ENERGY_LEVEL</string>
    <string name="energy_level_title">%1$s\'s energy level</string>
    <string name="title_activity_energy_level">View Energy Level</string>
    <string name="EXTRA_MEAL">com.raik383h_group_6.healthtracmobile.MEAL</string>
    <string name="meal_title">%1$s\'s meal</string>
    <string name="title_activity_meal">View meal</string>
    <string name="leaderboard_title">Lifetime Steps</string>
    <string name="invite_member">invite</string>
    <string name="invited_member">invited</string>
    <string name="invite_members">Invite Members</string>
    <string name="title_activity_invite_members">Invite Members</string>
    <string name="field_label_el">Field</string>
    <string name="threshold_label_el">Threshold</string>
    <string name="EXTRA_GOAL">com.raik383h_group_6.healthtracmobile.GOAL</string>
    <string name="today">Today:</string>
    <string name="steps_header">%1$d steps of lifetime total %2$f</string>
    <string name="duration_header">%1$.2f seconds of lifetime total %2$.2f</string>
    <string name="type_label">Type</string>
    <string name="startdate_label">Start date</string>
    <string name="update_type">Update type</string>
    <string name="default_type">WALKING</string>
    <string name="duration_hint">(seconds)</string>
    <string name="distance_hint">(feet)</string>
    <string name="steps_hint">(steps)</string>
    <string name="create_activity">Create Activity</string>
    <string name="create_activity_manual">Create Activity Manually</string>
    <string name="view_path">View Path</string>
    <string name="event_title">Enter Events</string>
</resources>