<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/event_title"
        android:textSize="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_activity"
        android:id="@+id/button_start_activity"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_activity_manual"
        android:id="@+id/button_create_activity"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_goal"
        android:id="@+id/button_create_goal"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_energy_level"
        android:id="@+id/button_create_energy_level"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_meal"
        android:id="@+id/button_create_meal"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>