<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_goal"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_label"
        android:id="@+id/field_label"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_field"
        android:checkedButton="@+id/radio_field_steps">

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/steps_label"
            android:id="@id/radio_field_steps"
            android:checked="true" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:id="@+id/radio_field_distance"
            android:checked="false" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/duration_label"
            android:id="@+id/radio_field_duration"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/threshold_label"
        android:id="@+id/threshold_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/threshold_hint"
        android:id="@+id/threshold_edittext"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_label"
        android:id="@+id/name_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/name_hint"
        android:id="@+id/name_edittext"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/create_goal"
        android:onClick="onClickCreateGoal"
        android:id="@+id/button_create_goal" />

</LinearLayout>