
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_updates_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_group_top_margin"
        android:onClick="startUpdatesButtonHandler"
        android:text="@string/start_updates" />

    <Button
        android:id="@+id/stop_updates_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_group_top_margin"
        android:enabled="false"
        android:onClick="stopUpdatesButtonHandler"
        android:text="@string/stop_updates" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_group_top_margin"
        android:text="@string/latitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/last_update_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_update_time_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/last_update_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:textSize="@dimen/default_text_size" />
</LinearLayout>